// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`---> Testing /Components/Favourites should render correctly when there are NO favourite movies 1`] = `
<section
  className="wrapper"
>
  <h1>
    My Favourites
  </h1>
  <div
    className="empty"
  >
    You don't have any favourites yet. Go and browse like a browser.
  </div>
</section>
`;

exports[`---> Testing /Components/Favourites should render correctly when there are no favourite movies 1`] = `
<section
  className="wrapper"
>
  <h1>
    My Favourites
  </h1>
  <div
    className="nonEmpty"
  >
    <div>
      <a
        className="link"
        href="/details/a"
        onClick={[Function]}
      >
        <img
          alt="poster"
          className="slide"
          src="b"
        />
        <h4
          role="title"
        >
          c
        </h4>
        <h5
          role="genre"
        >
          d
        </h5>
      </a>
    </div>
    <div>
      <a
        className="link"
        href="/details/d"
        onClick={[Function]}
      >
        <img
          alt="poster"
          className="slide"
          src="c"
        />
        <h4
          role="title"
        >
          b
        </h4>
        <h5
          role="genre"
        >
          a
        </h5>
      </a>
    </div>
  </div>
</section>
`;
